<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/pet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/pet_name"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/name_of_the_pet" />

    <TextView
        android:id="@+id/pet_breed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/breed1"
        android:contentDescription="@string/breed_of_the_pet" />
</LinearLayout>