<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_fetch_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetch_all_pets" />

    <Button
        android:id="@+id/btn_search_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_pet" />

    <Button
        android:id="@+id/btn_add_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_pet2" />

    <Button
        android:id="@+id/btn_delete_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_pet" />

    <Button
        android:id="@+id/btn_update_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_pet" />

    <Button
        android:id="@+id/btn_recently_vaccinated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Recently Vaccinated Pets"
        android:layout_marginBottom="16dp" />

</LinearLayout>